--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -10,8 +10,10 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 # Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
-org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
+org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=512m
 # org.gradle.jvmargs=-Xmx6g -XX:MaxMetaspaceSize=1024m
+org.gradle.daemon=true
+org.gradle.parallel=false
 
 
 # When configured, Gradle will run in incubating parallel mode.
@@ -41,3 +43,4 @@ newArchEnabled=false
 hermesEnabled=true
 # android.ndkVersion=23.1.7779620
 
+org.gradle.configureondemand=false
